--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -3378,6 +3378,13 @@ url = {http://florianhartig.github.io/DHARMa/},
   URL = {http://rpubs.com/tomhouslay/200150}
 }
 
+@book{mcelreath2020statistical,
+  title={Statistical rethinking: A Bayesian course with examples in R and Stan},
+  author={McElreath, Richard},
+  year={2020},
+  publisher={Chapman and Hall/CRC}
+}
+
 @book{statrethinkingbook, 
   author = {McElreath, Richard}, 
   Publisher = {CRC Press}, 
